--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/index.tsx",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "build"
-            }
+            "src": "package.json",
+            "use": "@vercel/static-build"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "App.tsx"
+            "dest": "/index.html"
         }
     ]
 }
